shadow.css
* {
    font-family: sans-serif;
    --red: #C62828;
    --orange: #f0653b;
    --active-orange: #ff754b;
    --active-grey: rgb(211, 210, 210);
}

i {
    /* This makes the i tag unclickable which allows me to click the element beneath it
       which in this case is the subtitle div which can be dragged this way */
    pointer-events: none;
}

hr {
    width: 100%;
    border: 0;
    height: 0;
    border-top: 1px solid rgba(122, 122, 122, 0.3);
    margin: 0.6em 0;
}

p {
    font-size: 15px;
    margin: 5px 5px;
}

.subtitle-button {
    display: inline-block;
    font-weight: 900;
    background-color: transparent;
    color: white;
    border: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
}

#controller {
    position: absolute;
    width: 100%;
    overflow: visible;
    background: none !important;
    text-align: center;
    color: white;
    cursor: default;
    z-index: 9999999;
}

#settings-wrapper {
    position: absolute;
    background-color: rgba(255, 255, 255, 0.795);
    color: black;
    width: 90%;
    max-width: 600px;
    top: 5vh;
    left: 50%;
    transform: translateX(-50%);
    border: 1px solid rgb(218, 218, 218);
    border-radius: 10px;
    box-shadow: 3px 3px 10px rgb(160, 160, 160);
    z-index: 9999998;
}

#settings-header {
    display: flex;
    justify-content: space-between;
}

#settings-body {
    display: flex;
    margin-top: 10px;
    font-size: 14px;
}

.settings-item {
    margin: 10px;
}

#settings-title {
    font-size: 23px;
    color: black;
}

#settings-close {
    font-size: 30px;
    margin-top: 0px;
    cursor: pointer;
}

.section-heading {
    text-align: center;
    font-size: 16px;
    color: #C62828;
    margin: 0;
}

#controls {
    display: none;
    margin: 5px;
}

#controller.dragging {
    cursor: -webkit-grabbing;
}

#subtitle-div {
    background-color: rgba(0, 0, 0, 0);
    display: inline-block;
    border-radius: 40px;
    padding: 5px 10px;
}

#below-subtitles {
    display: inline-block;
    border-radius: 40px;
    padding: 5px 10px;
}

button:focus {
    outline: 0;
}

button:hover {
    cursor: pointer;
}

#chooseFile {
    display: none;
}

.fileLabel {
    background-color: yellowgreen;
}

.sync-msg {
    display: inline-block;
    font-size: 16px;
    font-weight: 600;
    text-align: center;
    margin-top: 5px;
    padding: 5px 10px;
    border-radius: 20px;
    background-color: rgba(0, 0, 0, 0.8);
}

#skip-music {
    color: rgb(255, 142, 50);
    cursor: pointer;
}

#skip-music:hover {
    color: var(--orange);
}

#loaded {
    color: rgb(0, 255, 0);
}

#synced {
    color: rgb(0, 255, 0);
}

#not-synced {
    color: rgb(255, 0, 0);
}

.hide {
    display: none !important;
}

#video-icon {
    position: absolute;
    top: 15px;
    left: 15px;
    cursor: pointer;
    z-index: 99999999;
}

#speed-indicator {
    position: absolute;
    top: 60px;
    left: 10px;
    z-index: 99999999;
}

#subtitles {
    display: inline-block;
    margin-left: 0;
    margin-right: 0;
    -webkit-user-select: none;
}

#video-img {
    padding: 5px;
    border-radius: 3px;
    background-color: rgba(255, 255, 255, 0.849);
}

#settings-menu {
    text-align: start;
    font-size: 16px;
    font-weight: 600;
    color: black;
}

.menu-item {
    padding: 10px 15px 10px 30px;
    border-right: 1px solid rgb(189, 189, 189);
    cursor: pointer;
}

.menu-item:hover {
    background-color: rgba(0, 0, 0, 0.103);
}

.selected-menu-item {
    background-color: rgba(0, 0, 0, 0.2);
}

.selected-menu-item:hover {
    background-color: rgba(0, 0, 0, 0.2);
}

.settings-button {
    text-align: center;
    padding: 8px 16px;
    margin: 10px;
    font-size: 16px;
    font-weight: 600;
    border-radius: 5px;
    box-shadow: 3px 3px 10px rgb(136, 136, 136);
    cursor: pointer;
}

.subtitle-search-button {
    color: rgb(235, 235, 235);
    background-color: var(--orange);
}

.subtitle-upload-button {
    color: rgb(30,30,30); 
    background-color: rgb(200,200,200);
}

.subtitle-search-button:hover {
    background-color: var(--active-orange);
}

.subtitle-upload-button:hover {
    background-color: var(--active-grey);
}

#centered-box {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

#bottom-space {
    height: 20px;
    width: 170.45px;
}

#subtitle-content {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: -10px
}

#display-content {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
}

.display-label {
    font-size: 17px;
}

.display-box {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}
  
.slider {
    --range-size: 13px;
    -webkit-appearance: none;
    width: 150px;
    height: 3px;
    border-radius: 5px;
    background: #b8b8b8;
    margin-top: auto;
    margin-bottom: auto;
    outline: none;
    -webkit-transition: .2s;
    transition: opacity .2s;
}
  
.slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: var(--range-size);
    height: var(--range-size);
    border-radius: 50%;
    background: var(--orange);
    cursor: pointer;
}
  
.slider::-moz-range-thumb {
    width: var(--range-size);
    height: var(--range-size);
    border-radius: 50%;
    background: var(--orange);
    cursor: pointer;
}

#sync-range::-webkit-slider-thumb {
    background: grey;
}

#sync-range::-moz-range-thumb {
    background: grey;
}

.tooltip {
    position: relative;
    display: inline-block;
}
  
.tooltip .tooltiptext {
    visibility: hidden;
    width: 240px;
    background-color: #555;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;
    position: absolute;
    z-index: 1;
    bottom: 125%;
    left: 50%;
    margin-left: -60px;
    opacity: 0;
    font-weight: 300;
    transition: opacity 0.3s;
}
  
.tooltip .tooltiptext::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: #555 transparent transparent transparent;
}
  
.tooltip:hover .tooltiptext {
    visibility: visible;
    opacity: 1;
}

#sync-box {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

#subtitle-sync-button {
    width: 100%;
    padding-left: 0;
    padding-right: 0;
    color: rgba(255, 255, 255, 0.849);
    cursor: default;
    background-color: rgba(0,0,0,0.2);
}

#sync-range {
    width: 100%;
    margin-top: 10px;
    margin-bottom: 0px;
}

#sync-content {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
}

#settings-spacer {
    height: 20px;
}

.sync-input {
    background: transparent;
    border: none;
    width: 45px;
    margin-left: 32px;
    font-size: 16px;
}

.sync-input:focus {
    outline: none !important;
}

#offset-direction {
    -moz-appearance: none; /* Firefox */
    -webkit-appearance: none; /* Safari and Chrome */
    appearance: none;
    background: none;
    border: none;
    outline: none;
    color: #ee5122;
    font-size: 17px;
    font-weight: 600;
    cursor: pointer;
}

option {
    background-color: rgb(240, 240, 240);
    font-weight: 600;
}

.option-earlier {
    color: #f0653b;
}

.option-later {
    color: #C62828;
}

.text-cursor {
    cursor: text;
}

